--- a/static/style.css
+++ b/static/style.css
@@ -703,12 +703,34 @@ ion-icon[name="home"] {
   height: calc(0.8 * var(--navbar-height));
   text-decoration: none;
   color: var(--highlight-color);
-  font-size: 1rem;
+  font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
+
+.liblogin{
+  width: 100%;
+  height: 100%;
+}
+
+.button{
+  text-decoration: none;
+  padding: 10px 20px;
+  margin: 10px 5px 10px 5px;
+  border: solid;
+  border-color: var(--highlight-color);
+  border-width: 2px;
+  font-size: 1rem;
+  border-radius: 20px;
+  background: var(--primary-color);
+  color: var(--highlight-color);
+  transition: all var(--transition-speed) ease;
+}
+
+.button:hover {
+  background: var(--secondary-color);
+}
+
 /**********************************************************************************************************************/
