added some theme and completed landing page

--- a/templates/side_menu.html
+++ b/templates/side_menu.html
@@ -43,6 +43,30 @@
           <label for="theme-light">Light</label>
         </li>
         <li>
+          <input type="radio" name="theme" id="theme-richblue" />
+          <label for="theme-richblue">Rich Blue</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-vintage" />
+          <label for="theme-vintage">Vintage</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-nature" />
+          <label for="theme-nature">Nature</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-space" />
+          <label for="theme-space">Space</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-olivedrab" />
+          <label for="theme-olivedrab">Olive Drab</label>
+        </li>
+        <li>
+          <input type="radio" name="theme" id="theme-coffee" />
+          <label for="theme-coffee">Coffee</label>
+        </li>
+        <li>
           <input type="radio" name="theme" id="theme-greendarkgray" />
           <label for="theme-greendarkgray">Green-Dark-Gray</label>
         </li>
