--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,33 @@
 {% extends 'base.html' %}
-
 {% block title %}Music Streaming Application{% endblock %}
-
 {% block content %}
-<div class="home">
-    adafs<br>
-    fsdfsf<br>
-    sdgfgsfs<br>
-    fsfsdfdsdfsdf<br>
-    dgsdfdsf<br>
-    dsfdf<br>
-    dsfd<br>
+<div class="main-webapp">
+  <header>
+    <h1>Welcome to Resonix</h1>
+    <p>A gateway to endless music, anytime, anywhere.</p>
+  </header>
+
+  <div class="features">
+    <div class="feature">
+      <h3>Unlimited Songs</h3>
+      <p>Stream your favorite songs from a library of millions.</p>
+    </div>
+    <div class="feature">
+      <h3>Create Playlists</h3>
+      <p>Organize your music your way with custom playlists.</p>
+    </div>
+    <div class="feature">
+      <h3>Offline Mode</h3>
+      <p>Download songs and listen even without an internet connection.</p>
+    </div>
+    <div class="feature">
+      <h3>Ad-Free</h3>
+      <p>Enjoy uninterrupted music with our premium plan.</p>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; 2024 Music App. All rights reserved.</p>
+  </footer>
 </div>
 {% endblock %}
