--- a/static/style.css
+++ b/static/style.css
@@ -648,9 +648,7 @@ ion-icon[name="home"] {
   width: 100%;
 }
 
-/*********************************************************** LIBRARY ***********************************************************/
-
-.library{
+.library, .main-webapp {
   width: 100%;
   height: 100%;
   padding: 10px;
@@ -663,7 +661,6 @@ ion-icon[name="home"] {
   border-width: 5px;
   border-radius: 20px;
   background: var(--primary-color);
-  color: var(--highlight-color);
   overflow: hidden;
 }
 
@@ -671,6 +668,13 @@ ion-icon[name="home"] {
   width: 0px;
   height: 0px;
 }
+
+.main-webapp::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+/*********************************************************** LIBRARY ***********************************************************/
 
 .library-icon {
   display: flex;
@@ -775,24 +779,7 @@ ion-icon[name="home"] {
   background: var(--secondary-color);
 }
 
-/*********************************************************** MAIN-WEBAPP ***********************************************************/
-
-.main-webapp{
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  color: var(--highlight-color);
-  border: solid;
-  border-color: var(--secondary-color);
-  border-width: 5px;
-  border-radius: 20px;
-  background: var(--primary-color);
-  color: var(--highlight-color);
-  overflow-y: scroll;
-}
+/*********************************************************** INDEX ***********************************************************/
 
 header {
   text-align: center;
@@ -838,5 +825,7 @@ footer {
   color: var(--secondary-color);
   font-size: 0.8rem;
 }
+
+/*********************************************************** ABOUT ***********************************************************/
 
 /**********************************************************************************************************************/
