--- a/static/style.css
+++ b/static/style.css
@@ -350,15 +350,14 @@ ion-icon[name="home"] {
   width: auto;
 }
 
-.accordion-item ul li a {
-  width: auto;
-  text-decoration: none;
+.accordion-item ul li button {
+  all: unset;
+  width: 100%;
   border-radius: 10px;
   transition: all var(--transition-speed) ease;
   font-size: calc(0.8rem + 0.4vw);
   background: var(--primary-color);
   color: var(--highlight-color);
-  display: flex;
 }
 
 .accordion-item ul li :hover {
