--- a/templates/side_menu.html
+++ b/templates/side_menu.html
@@ -118,8 +118,8 @@
         <span class="icon">+</span>
       </label>
       <ul>
-        <li><a href="#">- Learn More About Us</a></li>
-        <li><a href="#">- Our Mission</a></li>
+        <li><button onclick="location.href='/?section=about'">- Learn More About Us</button></li>
+        <li><button onclick="location.href='/?section=our-mission'">- Our Mission</button></li>
       </ul>
     </div>
 
@@ -131,8 +131,8 @@
         <span class="icon">+</span>
       </label>
       <ul>
-        <li><a href="#">- Email Us</a></li>
-        <li><a href="#">- Support Page</a></li>
+        <li><button onclick="location.href='/?section=email'">- Email Us</button></li>
+        <li><button onclick="location.href='/?section=support'">- Support Page</button></li>
       </ul>
     </div>
 
