--- a/templates/s_menu_unko.html
+++ b/templates/s_menu_unko.html
@@ -27,8 +27,8 @@
       <span class="icon">+</span>
     </label>
     <ul>
-      <li><a href="/login">- Log In</a></li>
-      <li><a href="/register">- Sign Up</a></li>
+      <li><button onclick="location.href='/login'">- Log In</button></li>
+      <li><button onclick="location.href='/register'">- Sign Up</button></li>
     </ul>
   </div>
 {% endblock %}
