--- a/templates/side_menu.html
+++ b/templates/side_menu.html
@@ -96,20 +96,7 @@
         </li>
       </ul>
     </div>
-
-    <!-- Help & Support -->
-    <div class="accordion-item">
-      <input type="radio" name="accordion" id="help-support" />
-      <label for="help-support">
-        Help & Support
-        <span class="icon">+</span>
-      </label>
-      <ul>
-        <li><a href="#">- FAQ</a></li>
-        <li><a href="#">- Contact Support</a></li>
-      </ul>
-    </div>
-
+    
     <!-- About Us -->
     <div class="accordion-item">
       <input type="radio" name="accordion" id="about-us" />
@@ -122,17 +109,18 @@
         <li><button onclick="location.href='/?section=our-mission'">- Our Mission</button></li>
       </ul>
     </div>
-
-    <!-- Contact Us -->
+    
+    <!-- Help & Support -->
     <div class="accordion-item">
-      <input type="radio" name="accordion" id="contact-us" />
-      <label for="contact-us">
-        Contact Us
+      <input type="radio" name="accordion" id="help-support" />
+      <label for="help-support">
+        Help & Support
         <span class="icon">+</span>
       </label>
       <ul>
+        <li><button onclick="location.href='/?section=faq'">- FAQ</button></li>
         <li><button onclick="location.href='/?section=email'">- Email Us</button></li>
-        <li><button onclick="location.href='/?section=support'">- Support Page</button></li>
+        <li><button onclick="location.href='/?section=support'">- Support</button></li>
       </ul>
     </div>
 
