--- a/static/style.css
+++ b/static/style.css
@@ -825,6 +825,75 @@ footer {
   font-size: 0.8rem;
 }
 
-/*********************************************************** ABOUT ***********************************************************/
+/*********************************************************** FAQ ***********************************************************/
+.faq-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  overflow: scroll;
+}
+
+.faq-container::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+/* Accordion Items */
+.accordion-item-faq {
+  border-radius: 5px;
+  overflow: hidden;
+  padding-top: 0.3%;
+}
+
+.accordion-item-faq input {
+  display: none;
+}
+
+/* Label Styling */
+.accordion-item-faq label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0.5rem;
+  height: auto;
+  width: auto;
+  color: var(--highlight-color);
+  background: var(--primary-color);
+  transition: all var(--transition-speed);
+  font-size: calc(0.7rem + 0.4vw);
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.accordion-item-faq label:hover {
+  background: var(--secondary-color);
+  border: solid;
+  border-color: var(--highlight-color);
+}
+
+/* Toggle Behavior */
+.accordion-item-faq input:checked + label + .faq-answer {
+  max-height: 100vh;
+}
+
+.accordion-item-faq input:not(:checked) + label + .faq-answer {
+  max-height: 0;
+}
+
+/* List Styling */
+.accordion-item-faq .faq-answer {
+  list-style: none;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  width: auto;
+  transition: max-height var(--transition-speed) ease;
+  background: var(--secondary-color);
+  text-align: center;
+}
 
 /**********************************************************************************************************************/
