--- a/templates/s_menu_user.html
+++ b/templates/s_menu_user.html
@@ -83,8 +83,8 @@
       <span class="icon">+</span>
     </label>
     <ul>
-      <li><a href="/logout">- Sign Out</a></li>
-      <li><a href="/delete_account">- Delete Account</a></li>
+      <li><button onclick="location.href='/logout'">- Sign Out</button></li>
+      <li><button onclick="location.href='/delete_account'">- Delete Account</button></li>
     </ul>
   </div>
 {% endblock %}
