--- a/templates/s_menu_user.html
+++ b/templates/s_menu_user.html
@@ -26,9 +26,9 @@
         <span class="icon">+</span>
       </label>
       <ul>
-        <li><a href="#">- View Profile</a></li>
-        <li><a href="#">- Edit Profile</a></li>
-        <li><a href="#">- Change Avatar</a></li>
+        <li><button onclick="location.href='/user?action=view'">- View Profile</button></li>
+        <li><button onclick="location.href='/user?action=edit'">- Edit Profile</button></li>
+        <li><button onclick="location.href='/user?action=change_avatar'">- Change Avatar</button></li>
       </ul>
     </div>
 
