--- a/templates/register.html
+++ b/templates/register.html
@@ -28,10 +28,10 @@
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <div class="mb-3">
-                <label for="confirm_password" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                <label for="number" class="form-label">Phone Number</label>
+                <input type="number" class="form-control" id="number" name="number" required>
             </div>
-            <button type="submit" class="btn btn-secondary">Sign Up</button>
+            <button type="submit" class="btn btn-secondary btn-sm">Sign Up</button>
         </form>
     </div>
 {% endblock %}
