--- a/templates/support.html
+++ b/templates/support.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Support{% endblock %}
+{% block title %}Help & Support{% endblock %}
 
 {% block content %}
 <body class="background-primary">
